--- a/react-exercises/grocery-list-react/src/List.css
+++ b/react-exercises/grocery-list-react/src/List.css
@@ -39,6 +39,18 @@ h1 {
 .unorderGrocery-list .card{
   margin-right: 20px;
   margin-bottom: 20px;
+  position: relative;
+}
+.card a.remove{
+  position: absolute;
+  right: 5px;
+  top: -5px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.card a.remove:hover{
+  text-decoration: none;
 }
 
 .card-title{
